8344922: Redefinition verifies the new klass when verification is disabled